--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,10 @@ name = "xv6-rs"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
+
 [dependencies]
